# SystemCourse-lab2

./: CMakeLists.txt  rules.ninja
src/: calculator.cpp  calculator.h  main.cpp
